--- a/koa2/package.json
+++ b/koa2/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.0.0-alpha.7"
+    "koa": "^2.0.0-alpha.7",
+    "koa-bigpipe": "^1.0.9"
   }
 }
